part1-trees last task partial

--- a/sprawozdanie1/part1-trees.tex
+++ b/sprawozdanie1/part1-trees.tex
@@ -239,6 +239,6 @@ Poziom istotności testu statystycznego wykorzystywanego w~postpruningu. Węzeł
 Minimalna liczba obiektów, z~których można utworzyć liść. Podanie wartości większej niż 1 zapobiega powstawaniu bardzo wyspecjalizowanych ścieżek w~drzewie opisujących pojedyncze obiekty.
 \end{itemize}
 
-
+Uzyskanej w~skutek manipulowania powyższymi parametrami trafności możemy ufać tylko wtedy, gdy nie istnieje podejrzenie \emph{przespecjalizowania} drzewa. Mechanizm \emph{10-fold~CV} zapobiega przespecjalizowaniu poprzez wielokrotne budowanie drzewa dla różnych podzbiorów zbioru uczącego, nie daje nam to jednak gwarancji trafności na ,,nie widzianych'' wcześniej przez drzewo przypadkach.
 
 \end{itemize}
